changed package name from HydroToolbox to RgetDWDdata

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
-Package: HydroToolbox
+Package: RgetDWDdata
 Type: Package
-Title: A collection of tools useful for hydrological calculations
+Title: R functions to download data from the DWD (German Weather Service)
 Version: 0.1
 Date: 2015-01-09
 Author: Nanu Frechen, Egbert Gassert, Sabine Schümberg, Ina Pohle, Tobias Recke
 Maintainer: Nanu Frechen <nanu.frechen@b-tu.de>
-Description: A collection of tools useful for hydrological calculations
+Description: R functions to download data from the DWD (German Weather Service)
 License: GPL-2
 NeedsCompilation: no
 Depends: lubridate, XML, EcoHydRology
