--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,14 @@ Package: RgetDWDdata
 Type: Package
 Title: R functions to download data from the DWD (German Weather Service)
 Version: 0.1
-Date: 2015-01-09
+Date: 2015-12-09
 Author: Nanu Frechen, Egbert Gassert, Sabine Schümberg, Ina Pohle, Tobias Recke
 Maintainer: Nanu Frechen <nanu.frechen@b-tu.de>
 Description: R functions to download data from the DWD (German Weather Service).
 License: GPL-2
 NeedsCompilation: no
 Depends: lubridate, XML, EcoHydRology, RCurl
-Suggests: maps
+Suggests: maps, knitr
+VignetteBuilder: knitr
 Encoding: UTF-8
 Language: DE
