list.ftp function to list files on an ftp server which converts \r\n to \n on windows machines

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Maintainer: Nanu Frechen <nanu.frechen@b-tu.de>
 Description: R functions to download data from the DWD (German Weather Service)
 License: GPL-2
 NeedsCompilation: no
-Depends: lubridate, XML, EcoHydRology
+Depends: lubridate, XML, EcoHydRology, RCurl
 Suggests: maps
 Encoding: UTF-8
 Language: DE
