Korrekte Spaltennamen Ersetzung

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,4 +3,5 @@ import(lubridate, XML, RCurl)
 
 importFrom("stats", "na.omit")
 importFrom("utils", "download.file", "head", "read.table", "tail", "unzip")
-importFrom("readr", "read_table", "locale")
+importFrom("readr", "read_table", "read_delim", "locale")
+importFrom("dplyr", "select")
